Laravel package auto-discovery

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,12 @@
         "psr-4": {
             "Nissi\\Generators\\": "src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Nissi\\Generators\\GeneratorServiceProvider"
+            ]
+        }
     }
 }
