--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "nissicreative/laravel-generators",
     "description": "Generate resource controllers and views",
     "require": {
-        "illuminate/support": "^5.3"
+        "illuminate/support": "^5.3 || ^6.0 || ^7.0"
     },
     "license": "MIT",
     "authors": [{
